--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
         "@types/mocha": "^2.2.42"
     },
     "dependencies": {
-        "axios": "^0.18.0"
+        "@types/axios": "^0.14.0",
+        "axios": "^0.18.0",
+        "roku-deploy": "^0.2.1"
     }
 }
